--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,13 @@ body {
 
 /* Кнопки */
 .buttons {
-    margin-top: 40px;
+    margin-top: 110px;
     display: flex;
     justify-content: center;
     gap: 18px;
     flex-wrap: wrap;
     z-index: 6;
+    position: relative;
 }
 .btn {
     background: rgba(10,25,75,0.65);
