--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,11 @@ body {
 /* Иллюстрации */
 .banner-illustration-left,
 .banner-illustration-right {
-    position: absolute;
-    bottom: 0;
-    width: 100px;
-    opacity: 0.9;
+    position: relative;
+    bottom: auto;
+    width: 120px;
+     margin: 0 20px;
+    opacity: 0.95;
     filter: drop-shadow(0 0 22px rgba(230,230,255,0.4)) brightness(1.1);
     z-index: 4;
 }
