--- a/styles.css
+++ b/styles.css
@@ -394,3 +394,25 @@ h2 {
     line-height: 1.4;
     font-family: "Marck Script", cursive;
 }
+/* ========= SIMPLE CSS SNOW (NO JS NEEDED) ========= */
+
+.snow-container {
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-image:
+        url("https://i.imgur.com/9C1bKfZ.png"),
+        url("https://i.imgur.com/9C1bKfZ.png"),
+        url("https://i.imgur.com/9C1bKfZ.png");
+    background-repeat: repeat;
+    animation: snow 20s linear infinite;
+}
+
+@keyframes snow {
+    0% { background-position: 0 0, 0 0, 0 0; }
+    100% { background-position: 0 2000px, 0 1500px, 0 1000px; }
+}
