--- a/styles.css
+++ b/styles.css
@@ -386,7 +386,7 @@ h2 {
     top: -10px;
     width: 14px;
     height: 14px;
-    background-image: url("snowflake_gitter.webp");
+    background-image: url("snowflake_glitter.webp");
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 0.8;
