--- a/styles.css
+++ b/styles.css
@@ -400,7 +400,7 @@ h2 {
     top: -20px;
     width: 18px;
     height: 18px;
-    background-image: url("snowflake_glitter.webp"); /* <-- DEINE DATEI */
+    background-image: url("snowflake-gold.png"); /* <-- DEINE DATEI */
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 0.9;
