--- a/styles.css
+++ b/styles.css
@@ -404,7 +404,7 @@ h2 {
     top: -20px;
     width: 18px;
     height: 18px;
-   background-image: url("snowflake_glitter.webp");
+   background-image: url("snowflake-gold.png");
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 1;
