--- a/styles.css
+++ b/styles.css
@@ -443,3 +443,6 @@ section p {
     margin-top: 0 !important;
     padding-top: 0 !important;
 }
+.read-button {
+    margin-bottom: 30px !important;   /* Abstand nach unten */
+}
