--- a/styles.css
+++ b/styles.css
@@ -465,3 +465,11 @@ section {
     margin-bottom: 10px !important;
     padding-bottom: 0 !important;
 }
+@media (max-width: 700px) {
+    .snowflake {
+        width: 24px !important;
+        height: 24px !important;
+        animation-duration: 18s !important;
+    }
+}
+
